--- a/style.css
+++ b/style.css
@@ -5,3 +5,51 @@
     font-family:'poppins',sans-serif;
     box-sizing: border-box;
 }
+
+body{
+
+    background-color: #080808;
+    color: #fff;
+}
+
+#header {
+    width: 100%;
+    height: 100vh;
+    background-image: url(https://images.pexels.com/photos/30340399/pexels-photo-30340399/free-photo-of-young-man-by-tranquil-pond-in-forest-park.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load);
+    background-size: auto 100%; /* Full height, auto width */
+    background-repeat: no-repeat;
+    background-position: right center; /* Positions image to right */
+}
+
+.container{
+    padding: 5px 6%;
+}
+
+#logoSr{
+
+    width: 60px;
+    height: auto;
+}
+
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+nav ul{
+    margin-right: 30%;
+    
+}
+
+nav ul li{
+    display: inline-block;
+    list-style: none;
+    margin: 10px 20px;
+}
+
+nav ul li a{
+
+    text-decoration: none;
+}
