--- a/style.css
+++ b/style.css
@@ -52,4 +52,44 @@ nav ul li{
 nav ul li a{
 
     text-decoration: none;
+    color: #ffff;
+    font-size: 18px;
+    position: relative;
+}
+
+nav ul li a::after{
+    content:'';
+    width: 0;
+    height: 3px;
+    background: #ff004f;
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    transition: 0.5s;
+}
+
+nav ul li a:hover::after{
+    width: 100%;
+}
+
+nav ul li a:hover{
+    color: #06bd43;
+}
+
+.header-text{
+
+    margin-top: 10%;
+    margin-left: 60px;
+    font-size: 30px;
+}
+
+.header-text h1{
+
+    font-size: 60px;
+    margin-top: 20px;
+}
+
+.header-text h1 span{
+
+    color: #AA6BE4;
 }
