--- a/style.css
+++ b/style.css
@@ -15,12 +15,8 @@ body{
 /* header */
 
 #header {
+  height:auto;
   width: 100%;
-  height: 20vh;
-}
-
-.header-text{ 
-    padding-top: 0px;  
 }
 
 .row-one{
@@ -39,6 +35,7 @@ body{
 
 .right-header img{
     width: 100%;
+    height: 70vh;
     border-radius: 15px;
 }
 
@@ -113,7 +110,7 @@ nav ul li a:hover{
 
 .header-text{
 
-    margin-top: 10%;
+    margin-top: 6%;
     margin-left: 60px;
     font-size: 30px;
 }
@@ -133,7 +130,10 @@ nav ul li a:hover{
 
 #about{
     padding: 15% 0;
-    color: black;
+}
+
+.about-content{
+    color: white;
 }
 
 .row-two{
@@ -159,19 +159,85 @@ nav ul li a:hover{
     font-size: 60px;
     font-weight: 600;
     color: #07c948;
+    margin-left: 22px;
+    border-bottom: 3px solid #fefefe; /* Underline */
+    display: inline-block;
+    
 }
 
 .about-content{
     padding: 10px;
-    font-size: 20px;
-    /* border: 2px solid rgb(0, 0, 0); */
+    font-size: 18px;
+    border: 2px solid rgb(255, 255, 255);
     border-radius: 10px;
-    background-color: rgb(233, 223, 35);
+    background-color: rgb(38, 38, 38);
     margin: 20px;
     cursor: pointer;
 }
 
+.about-content p{
+    font-family: monospace;
+}
+
 .about-content:hover{
-    box-shadow: 4px 3px rgb(255, 255, 254);
-    background-color: rgb(255, 243, 19);
+    box-shadow: 4px 3px #08ff42;
+    background-color: rgb(255, 255, 252);
+    color: black;
+}
+
+.tab-titles{
+    display: flex;
+    margin: 20px 22px 40px;
+    color: white;
+}
+
+.tab-links{
+    margin-right: 50px;
+    font-size: 18px;
+    font-weight: 500;
+    cursor: pointer;
+    position: relative;
+}
+
+.tab-links::after{
+    content: "";
+    width: 0;
+    height: 3px;
+    background: #ff004f;
+    position: absolute;
+    left: 0;
+    bottom: -8px;
+    transition: 0.5s;
+}
+
+.tab-links.active-link::after{
+    width: 60px;
+}
+
+.tab-contents ul li{
+  list-style: none;
+  margin: 19px 19px;
+}
+
+.tab-contents ul li span{
+    color: #08ff42;
+    font-size: 16px;
+    font-weight: bold;
+    border-bottom: 3px solid white;
+    padding-bottom: 4px;
+    display: inline-block;
+}
+
+.tab-desc{
+    margin-top: 13px;
+    font-size: 16px;
+    font-family:monospace;
+}
+
+.tab-contents{
+    display: none;
+}
+
+.tab-contents.active-tab{
+    display: block;
 }
